config/bases/lighthouse/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hook
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - lighthouse
    secretName: lighthouse-hook-tls
  rules:
  - host: lighthouse
    http:
      paths:
      - path: /
        backend:
          serviceName: hook
          servicePort: 80
